--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "i18next": "^23.12.2",
     "mini-css-extract-plugin": "^2.9.0",
     "on-change": "^5.0.1",
     "yup": "^1.4.0"
