--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
     "workbox-webpack-plugin": "^7.1.0"
   },
   "dependencies": {
+    "axios": "^1.7.3",
     "bootstrap": "^5.3.3",
     "i18next": "^23.12.2",
+    "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^2.9.0",
     "on-change": "^5.0.1",
     "yup": "^1.4.0"
